clickhouse-k8s/otel/otel-collector-external-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: otel-collector-external-service
  namespace: ingress
spec:
  type: ExternalName
  externalName: otel-collector.signoz.svc.cluster.local
  ports:
  - port: 4317
  - port: 14268
