clickhouse-k8s/otel/otel-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: otel-collector
  name: otel-collector
spec:
  ports:
    - name: "1777"
      port: 1777
      targetPort: 1777
    - name: "8887"
      port: 8887
      targetPort: 8888
    - name: "14268"
      port: 14268
      targetPort: 14268
    - name: "55678"
      port: 55678
      targetPort: 55678
    - name: "55680"
      port: 55680
      targetPort: 55680
    - name: "55681"
      port: 55681
      targetPort: 55681
    - name: "4317"
      port: 4317
      targetPort: 4317
    - name: "55679"
      port: 55679
      targetPort: 55679
    - name: "13133"
      port: 13133
      targetPort: 13133
  selector:
    io.kompose.service: otel-collector
status:
  loadBalancer: {}
